--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.4.3';
+const VERSION = 'v1.4.4';
 
 window.addEventListener('DOMContentLoaded', () => {
   if (!('serviceWorker' in navigator)) {
@@ -564,7 +564,7 @@ window.addEventListener('DOMContentLoaded', () => {
   <!-- Banner -->
   <div id="switch-banner">
     <span class="icon">Warnung</span>
-    <span id="switch-text">SERVERSTÖRUNG – Bitte in 5min erneut probieren…</span>
+    <span id="switch-text">INTERNETSTÖRUNG – Bitte in 5min erneut probieren…</span>
   </div>
 
   <!-- Status -->
@@ -1237,7 +1237,7 @@ function setBanner(mode, extraText) {
         if (isOffline) {
           setBanner('offline', 'Server offline – bitte Administrator kontaktieren.');
         } else {
-          setBanner('switching', 'SERVERWECHSEL – Verbindung wird umgeschaltet…');
+          setBanner('switching', 'INTERNETSTÖRUNG – Bitte in 5min erneut probieren…');
         }
 
         (async () => {
