--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
 }
 
 .close-detail {
-  position: absolute;
-  top: 16px;
-  right: 16px;
+  position: sticky;
+  top: 12px;
+  margin-left: auto;
   background: #e50914;
   color: white;
   border: none;
@@ -382,12 +382,13 @@
   height: 38px;
   font-size: 22px;
   cursor: pointer;
-  z-index: 10;
+  z-index: 20;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background 0.2s;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.6);
 }
+
 
 .close-detail:hover {
   background: #f41a22;
@@ -494,7 +495,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.4.7';
+const VERSION = 'v1.4.8';
 
 window.addEventListener('DOMContentLoaded', () => {
   if (!('serviceWorker' in navigator)) {
